@@ -1,3 +1,7 @@
+2018-04-06  Thomas E. Dickey  <dickey@invisible-island.net>
+
+	* tests/decset.py, tests/rep.py: fixed:332
+
 2018-04-05  Thomas E. Dickey  <dickey@invisible-island.net>
 
 	* tests/decset.py: works for me
